--- a/src/index.html
+++ b/src/index.html
@@ -388,11 +388,11 @@
         display: block !important;
       }
 
-      ul li {
+      .panel ul li {
         list-style: none;
         height: 20px;
-        border: 1px solid black;
         margin: 10px;
+        
       }
     }
   </style>
@@ -401,7 +401,7 @@
   <body class="">
     <div class="main-containe">
       <!-- start here -->
-      <div class="p-[0px] m-[0px] font-[Montserrat] max-w-[1570px] mx-auto">
+      <div class="p-[0px] m-[0px] font-[Montserrat] max-w-[1570px mx-auto">
         <!-- header-section -->
         <header class="fixed right-[0px] left-[0px] W-[100%] z-20">
           <div
