mb-botton-follow

--- a/src/index.html
+++ b/src/index.html
@@ -1649,7 +1649,7 @@
             class="collection pl-[12px] pr-[12px] lg:pl-[116px] lg:pr-[116px]"
           >
             <!-- title-button- -->
-            <div class="tittle-best-seller flex justify-between items-center">
+            <div class="tittle-best-seller flex justify-between items-center mb-[20px]">
               <h3
                 class="text-[20px] lg:text-[32px] font-[700] lg:font-[600] text-[#0C0C0C]"
               >
